--- a/commerce/auctions/templates/auctions/listing/listing_list.html
+++ b/commerce/auctions/templates/auctions/listing/listing_list.html
@@ -8,6 +8,11 @@
             <li>{{ item.text }}</li>
             <li>{{ item.start_bid }}</li>
             <li><img src="{{ item.image.url }}" alt="Listing Image" class="img-fluid"></li>
+            
+            <form method="post" action="{% url 'delete_listing' item.pk %}">
+                {% csrf_token %}
+                <input type="submit" value="Delete">
+            </form>            
         {% endfor %}
     </ul>
 {% endblock %}
