--- a/commerce/auctions/templates/auctions/listing/create_listing.html
+++ b/commerce/auctions/templates/auctions/listing/create_listing.html
@@ -20,6 +20,7 @@
         <div class="form-group">
             <label for="id_image">Image:</label>
             {{ form.image }}
+            <small class="form-text text-muted">Optional</small>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
