--- a/commerce/auctions/templates/auctions/listing/listing_list.html
+++ b/commerce/auctions/templates/auctions/listing/listing_list.html
@@ -7,8 +7,8 @@
             <li>{{ item.title }}</li>
             <li>{{ item.text }}</li>
             <li>{{ item.start_bid }}</li>
-            <li><img src="{{ item.image.url }}" alt="Listing Image" class="img-fluid"></li>
-            
+            <li><img src="{{ item.image.url }}" style="width: 200px; height: 200px;" alt="Listing Image" class="img-fluid"></li>
+
             <form method="post" action="{% url 'delete_listing' item.pk %}">
                 {% csrf_token %}
                 <input type="submit" value="Delete">
