--- a/commerce/auctions/templates/auctions/listing/all_listing.html
+++ b/commerce/auctions/templates/auctions/listing/all_listing.html
@@ -4,28 +4,29 @@
     <h2>Active Listings</h2>
     
         {% for item in listings %}
-        {% if item.is_active %}
         <div class="listing_container">            
             <table>                
                 <td>
                     {% if item.image %}
-                    <a href="auctions/listing/{{ item.id }}"><img src="{{ item.image.url }}" style="width: 200px; height: 200px;" alt="Listing Image" class="img-fluid"></a><br>
+                    <a href="/auctions/listing/{{ item.id }}"><img src="{{ item.image.url }}" style="width: 200px; height: 200px;" alt="Listing Image" class="img-fluid"></a><br>
                     {% endif %}
                 </td>
                 <td class="table_margin">
-                    <h4><a href="auctions/listing/{{ item.id }}">{{ item.title }}</a></h4>
+                    {% if item.is_active %}
+                    <h4><a href="/auctions/listing/{{ item.id }}">{{ item.title }}</a></h4>
+                    {% else %}
+                    <h4><a href="/auctions/listing/{{ item.id }}">{{ item.title }}</a> - [Closed]</h4>
+                    {% endif %}
                     <b>Price: ${{ item.start_bid }}</b></br>
                     Listing Id: {{ item.id }}. {{ item.text }}<br>
                     <p class="created_at">Created at: {{ item.created_at }}</p>    
-
-                    <form method="post" action="{% url 'listing_detail' item.pk %}">
+                    <form method="post" action="{% url 'delete_listing' item.pk %}">
                         {% csrf_token %}
-                        <input type="submit" value="Bid">
-                    </form>   
+                        <input type="submit" value="Delete">
+                    </form>
                 </td>
             </table>
         </div><br>
-        {% endif %}
         {% endfor %}
       
 {% endblock %}
