--- a/commerce/auctions/templates/auctions/listing/listing_detail.html
+++ b/commerce/auctions/templates/auctions/listing/listing_detail.html
@@ -4,10 +4,21 @@
 <div class="listing_container">
         <table>
         <td>{% if listing.image %}
-                <img src="{{ listing.image.url }}" alt="Listing Image" class="img-fluid"><br>
+                <img src="{{ listing.image.url }}" style="width: 200px; height: 200px;" alt="Listing Image" class="img-fluid"><br>
                 {% endif %}
         </td>
-        <td class="table_margin">                
+        <td class="table_margin">  
+                {% if user.is_authenticated %}
+                    {% if not listing.is_active %}
+                        <p>This listing is closed.</p>
+                        {% if user == listing.winner %}
+                            <h5>Congratulations {{ listing.winner.username }}! You have won this auction!</h5>
+                        {% else %}
+                            <p>Sorry, you did not win this auction.</p>
+                        {% endif %}
+                    {% endif %}
+                {% endif %}
+
                 <h4>{{ listing.title }}</h4>
                 <b>Price: ${{ listing.start_bid }}</b></br>
                 Listing Id: {{ listing.id }}. {{ listing.text }}<br>
@@ -15,18 +26,28 @@
                
                 {% if user.is_authenticated %}
                
+                {% if listing.is_active %}
                 <form method="post" action="{% url 'place_bid' listing.id %}">
                         {% csrf_token %}
                         <label for="bid_amount">Your Bid Amount:</label>
                         <input type="number" name="bid_amount" step="0.01" min="{{ listing.start_bid }}">
                         <button type="submit">Place Bid</button>
                 </form>
+                {% endif %}
+          
 
                         {% if watchlist_items %}
                                 <a href="{% url 'remove_from_watchlist' listing.pk %}">Remove from Watchlist</a>
                         {% else %}
                                 <a href="{% url 'add_to_watchlist' listing.pk %}">Add to Watchlist</a>
                         {% endif %}
+                {% endif %}
+
+                {% if user.is_authenticated and listing.user == user and listing.is_active %}
+                        <form method="post" action="{% url 'close_auction' listing.id %}">
+                                {% csrf_token %}
+                                <button type="submit">Close Auction</button>
+                        </form>
                 {% endif %}
 
                 <form method="post" action="{% url 'delete_listing' listing.pk %}">
