--- a/commerce/auctions/templates/auctions/listing/closed.html
+++ b/commerce/auctions/templates/auctions/listing/closed.html
@@ -1,9 +1,10 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>    
+    <h2>Closed Listings</h2>
+    
         {% for item in listings %}
-        {% if item.is_active %}
+        {% if not item.is_active %}
 
         {% if forloop.counter0|divisibleby:2 %}
             <div class="row">
@@ -18,18 +19,13 @@
                     {% endif %}
                 </td>
                 <td class="table_margin" style="padding-left: 10px;">
-                    <h4><a href="/auctions/listing/{{ item.id }}">{{ item.title }}</a></h4>
+                    <h4><a href="/auctions/listing/{{ item.id }}">{{ item.title }}</a> - [Closed]</h4>
                     <b>Price: ${{ item.start_bid }}</b></br>
                     Listing Id: {{ item.id }}. {{ item.text }}<br>
                     <p class="created_at">Created at: {{ item.created_at }}</p>    
-
-                    <form method="post" action="{% url 'listing_detail' item.pk %}">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-primary btn-sm" value="Bid">Bid</button>
-                    </form>   
                 </td>
             </table>
-            </div>
+        </div>
         </div>
         <br>
         {% if forloop.counter|divisibleby:2 or forloop.last %}
