--- a/commerce/auctions/templates/auctions/listing/listing_detail.html
+++ b/commerce/auctions/templates/auctions/listing/listing_detail.html
@@ -31,10 +31,9 @@
                         {% csrf_token %}
                         <label for="bid_amount">Your Bid Amount:</label>
                         <input type="number" name="bid_amount" step="0.01" min="{{ listing.start_bid }}">
-                        <button type="submit">Place Bid</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Place Bid</button>
                 </form>
-                {% endif %}
-          
+                {% endif %}          
 
                         {% if watchlist_items %}
                                 <a href="{% url 'remove_from_watchlist' listing.pk %}">Remove from Watchlist</a>
@@ -46,14 +45,9 @@
                 {% if user.is_authenticated and listing.user == user and listing.is_active %}
                         <form method="post" action="{% url 'close_auction' listing.id %}">
                                 {% csrf_token %}
-                                <button type="submit">Close Auction</button>
+                                <button type="submit" class="btn btn-warning btn-sm">Close Auction</button> <button type="delete" class="btn btn-danger btn-sm">Delete Auction</button>
                         </form>
                 {% endif %}
-
-                <form method="post" action="{% url 'delete_listing' listing.pk %}">
-                        {% csrf_token %}
-                        <input type="submit" value="Delete Item">
-                </form>
         </td>
         </table>
         </div>
@@ -75,7 +69,7 @@
             {% csrf_token %}            
             <textarea class="form-control" id="id_text" name="text" maxlength="500" required style="width: 400px; height: 120px;"></textarea>
             <br>
-            <button type="submit">Submit</button>
+            <button type="submit" class="btn btn-primary btn-sm" value="Bid">Submit</button>
         </form>
         {% else %}
                 <p>You must be logged in to comment.</p>
