--- a/commerce/auctions/templates/auctions/login.html
+++ b/commerce/auctions/templates/auctions/login.html
@@ -2,23 +2,25 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <h2 class="text-center">Login</h2>
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
+    <div class="text-center">
+        <form action="{% url 'login' %}" method="post" style="display: inline-block;">
+            {% csrf_token %}
+            <div class="form-group">
+                <input autofocus class="form-control" style="width: 300px;" type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" style="width: 300px;" type="password" name="password" placeholder="Password">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Login">
+        </form>
+    </div>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    <p class="text-center">Don't have an account? <a href="{% url 'register' %}">Register here.</a></p>
 
 {% endblock %}
