--- a/commerce/auctions/templates/auctions/register.html
+++ b/commerce/auctions/templates/auctions/register.html
@@ -2,29 +2,30 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+    <h2 class="text-center">Register</h2>
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
+    <div class="text-center">
+        <form action="{% url 'register' %}" method="post" style="display: inline-block;">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" style="width: 300px;" autofocus type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" style="width: 300px;" type="email" name="email" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+                <input class="form-control" style="width: 300px;" type="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <input class="form-control" style="width: 300px;" type="password" name="confirmation" placeholder="Confirm Password">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Register">
+        </form>
+    </div>
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    <p class="text-center">Already have an account? <a href="{% url 'login' %}">Log In here.</a></p>
 
 {% endblock %}
