Added seeds for users, categories, items, comments

--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -6,9 +6,15 @@ body {
     border: 1px solid #ccc;
     border-radius: 10px; /* Adjust the value to control the roundness of the border */
     padding: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .created_at {
     font-size: 0.8em;
     color: grey;
+}
+
+.css_comments {        
+    margin-left: 20px;
 }
