--- a/commerce/auctions/templates/auctions/listing/listing_list.html
+++ b/commerce/auctions/templates/auctions/listing/listing_list.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Listings</h2>
+    <h2 style="padding-left: 20px; padding-bottom: 10px;">Listings</h2>
     <ul>
         {% for item in listings %}
             <li>{{ item.title }}</li>
