--- a/commerce/auctions/templates/auctions/listing/closed.html
+++ b/commerce/auctions/templates/auctions/listing/closed.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Closed Listings</h2>
+    <h2 style="padding-left: 20px; padding-bottom: 10px;">Closed Listings</h2>
     
         {% for item in listings %}
         {% if not item.is_active %}
@@ -15,7 +15,9 @@
             <table>                
                 <td>
                     {% if item.image %}
-                    <a href="/auctions/listing/{{ item.id }}"><img src="{{ item.image.url }}" style="width: 200px; height: 200px;" alt="Listing Image" class="img-fluid"></a><br>
+                        <a href="/auctions/listing/{{ item.id }}"><img src="{{ item.image.url }}" style="width: 200px; height: 200px;" alt="Listing Image" class="img-fluid"></a><br>
+                    {% else %}
+                        <img src="/media/listing_images/no_image.jpg" alt="Default Image">
                     {% endif %}
                 </td>
                 <td class="table_margin" style="padding-left: 10px;">
