--- a/commerce/auctions/templates/auctions/login.html
+++ b/commerce/auctions/templates/auctions/login.html
@@ -1,12 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-
-    <h2 class="text-center">Login</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+    <h2 class="text-center">Login</h2><br>
 
     <div class="text-center">
         <form action="{% url 'login' %}" method="post" style="display: inline-block;">
@@ -22,5 +17,9 @@
     </div>
 
     <p class="text-center">Don't have an account? <a href="{% url 'register' %}">Register here.</a></p>
+
+    {% if message %}
+        <div class="text-center" style="color: red"><b>{{ message }}</b></div>
+    {% endif %}
 
 {% endblock %}
