Mail Project added Mailbox and View Email

--- a/38mail/mail/templates/mail/inbox.html
+++ b/38mail/mail/templates/mail/inbox.html
@@ -11,6 +11,12 @@
     <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
     <hr>
 
+    <div id="single-email-view">
+        <div class="container" id="single-email-content">
+
+        </div>
+    </div>
+
     <div id="emails-view">
     </div>
 
