Reply email format

--- a/38mail/mail/templates/mail/inbox.html
+++ b/38mail/mail/templates/mail/inbox.html
@@ -12,8 +12,7 @@
     <hr>
 
     <div id="single-email-view">
-        <div class="container" id="single-email-content">
-
+        <div class="container" id="single-email-content" style="white-space: pre-line;">        
         </div>
     </div>
 
@@ -33,7 +32,7 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input type="submit" class="btn btn-primary" id="send-button"/>
         </form>
     </div>
 {% endblock %}
