--- a/38mail/mail/templates/mail/inbox.html
+++ b/38mail/mail/templates/mail/inbox.html
@@ -16,8 +16,7 @@
         </div>
     </div>
 
-    <div id="emails-view">
-    </div>
+    <div id="emails-view" style="white-space: pre-line;"></div>
 
     <div id="compose-view">
         <h3>New Email</h3>
